# compas

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  PROGRESS.md  README.md  compas_modele.xlsx  pyproject.toml  soft_skills_dashboard_v4_final.html
.claude/: settings.json
.github/instructions/: tests.instructions.md
docs/: compas_dashboard_compact.html  compas_fiche_individuelle.html  compas_guide_criteres.md  demo.xlsx  fiche_multi_projets.md  installation-windows.md
scripts/: generate_test_data.py  git-publish.sh
src/compas/: cli.py  dashboard.py  ema.py  explain.py  fiche.py  importer.py  presence_desc.py  validator.py
src/compas/templates/: dashboard.html  fiche.html
tests/: conftest.py  test_dashboard.py  test_ema.py  test_fiche.py  test_importer.py  test_integration.py  test_validator.py
tests/fixtures/: test_generated.xlsx  test_projet.xlsx
