[project]
name = "compas"
version = "0.1.0"
description = "Évaluation continue des soft skills pour BTS SIO SISR"
authors = [
    {name = "manastria", email = "manastria@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1",
    "jinja2>=3.1",
]

[project.scripts]
compas = "compas.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "compas", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.4"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
